--- a/views/pps/page-add-value.ejs
+++ b/views/pps/page-add-value.ejs
@@ -10,6 +10,7 @@
 	<div class="wrapper container-fluid">
 		<div class="content">
 			<h2 class="ml-md-1">Отметить выполнение ПЭД</h2>
+			<hr>
 			<div class="row">
 				<div class="col-sm-3 px-0 px-sm-2 mx-0">
 					<aside>
@@ -50,5 +51,6 @@
 	</div>
 	<%- include("../common/scripts.ejs")%>
 	<script type="text/javascript" src="/scripts/pps/add-value.js"></script>
+	<script type="text/javascript" src="/scripts/custom-file.js"></script>
 </body>
 </html>
