--- a/views/pps/partials/table-posted-values.ejs
+++ b/views/pps/partials/table-posted-values.ejs
@@ -6,7 +6,7 @@
 		<h5><%=desc[0].name %></h5>
 		<h5><%=desc[0].description %></h5>
 		<hr>
-		<button id="plus" class="btn btn-outline-primary">+ Отметить выполнение</button>
+		<button id="plus" class="btn btn-outline-primary">+ Добавить значение</button>
 	</div>
 	<div id="plusdiv" class="px-sm-3">
 		<form enctype="multipart/form-data" name="form1" action="/upload" method="post" id="formAddKpi" class="needs-validation" novalidate>
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 
-			<button id="addkpi" class="btn btn-primary">Добавить показатель</button>
+			<button id="addkpi" class="btn btn-primary">Сохранить</button>
 		</form>
 		<hr>
 	</div>
