adding a feature change university structure

--- a/views/change-users/page-change-user.ejs
+++ b/views/change-users/page-change-user.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Добавление пользователя</title>
+	<title>Изменение пользователя</title>
 	<%- include("../common/head.ejs")%>
 </head>
 <body class="d-flex flex-column h-100">
@@ -17,7 +17,7 @@
 				<div class="form-group row">
 					<label for="name" class="col-sm-2 col-form-label">ФИО</label>
 					<div class="col-sm-10">
-						<input type="text"name="name" class="form-control" id="name" value="<%=user.name%>" maxlength="100" autocomplete="off" required>
+						<input type="text" name="name" class="form-control" id="name" value="<%=user.name%>" maxlength="100" autocomplete="off" required>
 						<div class="invalid-feedback">
 							Пожалуйста введите ФИО
 						</div>
