--- a/views/common/menu.ejs
+++ b/views/common/menu.ejs
@@ -8,41 +8,39 @@
 		<ul class="navbar-nav mr-auto">
 			<% if(infoUser.rights.indexOf("get_my_score") !== -1) {%>
 				<li class="nav-item">
-					<a class="nav-link <%if (pageName == "/pps/get-my-score") {%><%='active'%><%}%>" href="/pps/get-my-score">Получить оценки <span class="sr-only">(current)</span></a>
+					<a class="nav-link<%if (pageName == "/pps/get-my-score") {%><%=' active'%><%}%>" href="/pps/get-my-score">Получить оценки <span class="sr-only">(current)</span></a>
 				</li>
 			<%} %>
+
 			<% if(infoUser.rights.indexOf("add_value_of_kpi") !== -1) {%>
 				<li class="nav-item">
-					<a class="nav-link <%if (pageName == "/pps/add-value-kpi") {%><%='active'%><%}%>" href="/pps/add-value-kpi">Отметить выполнение</a>
+					<a class="nav-link<%if (pageName == "/pps/add-value-kpi") {%><%=' active'%><%}%>" href="/pps/add-value-kpi">Отметить выполнение</a>
 				</li>
 			<%} %>
+
 			<% if(infoUser.rights.indexOf("get_my_values_of_kpi") !== -1) {%>
 				<li class="nav-item">
-					<a class="nav-link <%if (pageName == "/pps/get-values-kpi" || pageName == "/pps/val") {%><%='active'%><%}%>" href="/pps/get-values-kpi">Список добавленных ПЭД</a>
+					<a class="nav-link<%if (pageName == "/pps/get-values-kpi" || pageName == "/pps/val") {%><%=' active'%><%}%>" href="/pps/get-values-kpi">Список добавленных ПЭД</a>
 				</li>
 			<%} %>
+
 			<% if(infoUser.rights.indexOf("verify") !== -1) {%>
 				<li class="nav-item">
-					<a class="nav-link <%if (pageName == "/verify") {%><%='active'%><%}%>" href="/verify">Проверить ПЭД ППС</a>
+					<a class="nav-link<%if (pageName == "/verify") {%><%=' active'%><%}%>" href="/verify">Проверить ПЭД ППС</a>
 				</li>
 			<%} %>
+
 			<% if(infoUser.rights.indexOf("get_actions_users") !== -1) {%>
 				<li class="nav-item">
-					<a class="nav-link <%if (pageName == "/get-actions-users") {%><%='active'%><%}%>" href="/get-actions-users">Логи</a>
+					<a class="nav-link<%if (pageName == "/get-actions-users") {%><%=' active'%><%}%>" href="/get-actions-users">Логи</a>
 				</li>
 			<%} %>
+
 			<% if(infoUser.rights.indexOf("get_all_users") !== -1 || infoUser.rights.indexOf("create_user") !== -1
 					|| infoUser.rights.indexOf("delete_user") !== -1) {%>
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle
-						<%if (pageName == "/get-users" || pageName == "/change-users/add-user"
-							|| pageName == "/change-users/delete-user"
-							|| pageName == "/change-users/change-user") {%>
-							<%='active'%>
-						<%}%>
-					" href="#" id="dropdownUsers" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Пользователи
-					</a>
+					<a class="nav-link dropdown-toggle<%if (pageName == "/get-users" || pageName == "/change-users/"){%><%=' active'%><%}%>"
+					   href="#" id="dropdownUsers" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Пользователи</a>
 					<div class="dropdown-menu" aria-labelledby="dropdownUsers">
 						<% if(infoUser.rights.indexOf("get_all_users") !== -1) {%>
 							<a class="dropdown-item" href="/get-users">Список</a>
@@ -59,16 +57,11 @@
 					</div>
 				</li>
 			<%} %>
+
 			<% if(infoUser.rights.indexOf("create_pps") !== -1 || infoUser.rights.indexOf("change_password_pps") !== -1) {%>
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle
-						<%if (pageName == "/change-pps/add" || pageName == "/change-pps/change-password"
-							|| pageName == "/get-pps") {%>
-							<%='active'%>
-						<%}%>
-					" href="#" id="dropdownPps" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Сотрудники
-					</a>
+					<a class="nav-link dropdown-toggle<%if (pageName == "/change-pps/" || pageName == "/get-pps") {%><%=' active'%><%}%>"
+					   href="#" id="dropdownPps" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Сотрудники</a>
 					<div class="dropdown-menu" aria-labelledby="dropdownPps">
 						<% if(infoUser.rights.indexOf("change_pps") !== -1) {%>
 							<a class="dropdown-item" href="/get-pps">Список сотрудников</a>
@@ -86,14 +79,8 @@
 					|| infoUser.rights.indexOf("change_marks_of_kpi") !== -1 || infoUser.rights.indexOf("create_kpi") !== -1
 					|| infoUser.rights.indexOf("delete_kpi") !== -1) {%>
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle
-						<%if (pageName == "/get-kpi" || pageName == "/change-kpi/add-kpi"
-							|| pageName == "/change-kpi/edit-kpi" || pageName == "/change-kpi/choice-kpi") {%>
-							<%='active'%>
-						<%}%>
-					" href="#" id="dropdownKpi" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						ПЭД
-					</a>
+					<a class="nav-link dropdown-toggle<%if (pageName == "/get-kpi" || pageName == "/change-kpi/") {%><%=' active'%><%}%>"
+					   href="#" id="dropdownKpi" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ПЭД</a>
 					<div class="dropdown-menu" aria-labelledby="dropdownKpi">
 						<% if(infoUser.rights.indexOf("get_all_kpi") !== -1) {%>
 							<a class="dropdown-item" href="/get-kpi">Список</a>
@@ -114,13 +101,8 @@
 			<%} %>
 			<% if(infoUser.rights.indexOf("get_all_roles") !== -1 || infoUser.rights.indexOf("add_role") !== -1) {%>
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle
-								<%if (pageName == "/get-all-roles" || pageName == "/change-roles/add-role") {%>
-									<%='active'%>
-								<%}%>
-							" href="#" id="dropdownRole" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Роли
-					</a>
+					<a class="nav-link dropdown-toggle<%if (pageName == "/get-all-roles" || pageName == "/change-roles/add-role") {%><%=' active'%><%}%>"
+					   href="#" id="dropdownRole" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Роли</a>
 					<div class="dropdown-menu" aria-labelledby="dropdownRole">
 						<% if(infoUser.rights.indexOf("get_all_roles") !== -1) {%>
 							<a class="dropdown-item" href="/get-all-roles">Список</a>
@@ -133,13 +115,8 @@
 			<%} %>
 			<% if(infoUser.rights.indexOf("get_structure") !== -1 || infoUser.rights.indexOf("change_structure") !== -1) {%>
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle
-							<%if (pageName == "/get-structure") {%>
-								<%='active'%>
-							<%}%>
-						" href="#" id="dropdownStructure" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Структура
-					</a>
+					<a class="nav-link dropdown-toggle<%if (pageName == "/get-structure") {%><%=' active'%><%}%>"
+					   href="#" id="dropdownStructure" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Структура</a>
 					<div class="dropdown-menu" aria-labelledby="dropdownStructure">
 						<% if(infoUser.rights.indexOf("get_structure") !== -1) {%>
 							<a class="dropdown-item" href="/get-structure">Список</a>
@@ -149,14 +126,8 @@
 			<%} %>
 			<% if(infoUser.rights.indexOf("update_with_excel") !== -1) {%>
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle
-								<%if (pageName == "/update-db/add-users-from-file1" || pageName == "/update-db/add-users-from-file2"
-									|| pageName == "/update-db/past-kpi" || pageName == "/update-db/update-structure") {%>
-									<%='active'%>
-								<%}%>
-							" href="#" id="dropdownUpdateDb" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Обновление БД
-					</a>
+					<a class="nav-link dropdown-toggle<%if (pageName == "/update-db/") {%><%=' active'%><%}%>"
+					   href="#" id="dropdownUpdateDb" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Обновление БД</a>
 					<div class="dropdown-menu" aria-labelledby="dropdownUpdateDb">
 						<a class="dropdown-item" href="/update-db/add-users-from-file1">Добавить ППС вариант 1</a>
 						<a class="dropdown-item" href="/update-db/add-users-from-file2">Добавить ППС вариант 2</a>
@@ -167,22 +138,22 @@
 			<%} %>
 			<% if(infoUser.rights.indexOf("create_report") !== -1) {%>
 				<li class="nav-item">
-					<a class="nav-link <%if (pageName == "/pfu") {%><%='active'%><%}%>" href="/pfu">Создать отчет</a>
+					<a class="nav-link<%if (pageName == "/pfu") {%><%=' active'%><%}%>" href="/pfu">Создать отчет</a>
 				</li>
 			<%} %>
 			<% if(infoUser.rights.indexOf("set_period") !== -1) {%>
 				<li class="nav-item">
-					<a class="nav-link <%if (pageName == "/set-period") {%><%='active'%><%}%>" href="/set-period">Период</a>
+					<a class="nav-link<%if (pageName == "/set-period") {%><%=' active'%><%}%>" href="/set-period">Период</a>
 				</li>
 			<%} %>
 			<% if(infoUser.rights.indexOf("close_accounts") !== -1) {%>
 				<li class="nav-item">
-					<a class="nav-link <%if (pageName == "/close-accounts") {%><%='active'%><%}%>" href="/close-accounts">Доступ к ЛК</a>
+					<a class="nav-link<%if (pageName == "/close-accounts") {%><%=' active'%><%}%>" href="/close-accounts">Доступ к ЛК</a>
 				</li>
 			<%} %>
 			<% if(infoUser.rights.indexOf("change_my_password") !== -1) {%>
 				<li class="nav-item">
-					<a class="nav-link <%if (pageName == "/settings") {%><%='active'%><%}%>" href="/settings">Настройки</a>
+					<a class="nav-link<%if (pageName == "/settings") {%><%=' active'%><%}%>" href="/settings">Настройки</a>
 				</li>
 			<%} %>
 		</ul>
