--- a/views/common/modal-close.ejs
+++ b/views/common/modal-close.ejs
@@ -3,14 +3,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="modalTitle"></h5>
-                <button type="button" class="close" onClick="window.location.reload()" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body" id="modalBody">
             </div>
             <div class="modal-footer">
-                <button type="button" id="but-ok" class="btn btn-primary" onClick="window.location.reload()">Ок</button>
+                <button type="button" class="btn btn-primary"  data-dismiss="modal">Ок</button>
                 <a type="button" href="/my-page" class="btn btn-secondary">Перейти на Главную</a>
             </div>
         </div>
